--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,26 @@ edition = "2024"
 
 [workspace]
 members = [
-    "crates/"
+    "crates/*",
+    "plugins/*"
 ]
 
-[dependencies]
+[workspace.package]
+version = "0.1.0"
+edition = "2024"
+
+[workspace.dependencies]
+sources-manager = { path = "crates/sources-manager" }
 log = "0.4.27"
+tokio = { version = "1.40.0", features = ["full"] }
+libloading = "0.8.8"
+reqwest = "0.12.20"
+scraper = "0.23.1"
+serde = { version = "1.0.219", features = ["derive"] }
+toml = "0.8.23"
+
+[dependencies]
+tokio = { version = "1.40.0", features = ["full"] }
+sources-manager = { path = "crates/sources-manager" }
 log4rs = "1.3.0"
-mod-downloader = { path = "crates/mod-downloader" }
+log = "0.4.27"
