--- a/crates/sources-manager/Cargo.toml
+++ b/crates/sources-manager/Cargo.toml
@@ -4,14 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-libloading = "0.8.8"
 log = "0.4.27"
 log4rs = "1.3.0"
+tokio = { version = "1.40.0", features = ["full"] }
+libloading = "0.8.8"
 reqwest = "0.12.20"
+scraper = "0.23.1"
 serde = { version = "1.0.219", features = ["derive"] }
-sxd-document = { version = "0.3.2", features = ["compile_failure"] }
-sxd-xpath = "0.4.2"
 toml = "0.8.23"
+
 
 [lib]
 crate-type = ["rlib"]
