--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ edition = "2024"
 
 [workspace.dependencies]
 sources-manager = { path = "crates/sources-manager" }
+game-launcher = { path = "crates/game-launcher" }
 log = "0.4.27"
 tokio = { version = "1.40.0", features = ["full"] }
 libloading = "0.8.8"
@@ -24,7 +25,9 @@ serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.8.23"
 
 [dependencies]
-tokio = { version = "1.40.0", features = ["full"] }
 sources-manager = { path = "crates/sources-manager" }
+game-launcher = { path = "crates/game-launcher" }
+tokio = { version = "1.40.0", features = ["full"] }
 log4rs = "1.3.0"
 log = "0.4.27"
+clap = { version = "4.5.40", features = ["derive"] }
